RESOLVED FIXED75035
Always reposition the scrollbar layers when the frame view size changes
https://bugs.webkit.org/show_bug.cgi?id=75035
Summary Always reposition the scrollbar layers when the frame view size changes
Anders Carlsson
Reported 2011-12-21 14:22:39 PST
Always reposition the scrollbar layers when the frame view size changes
Attachments
Patch (4.39 KB, patch)
2011-12-21 14:26 PST, Anders Carlsson
darin: review+
Anders Carlsson
Comment 1 2011-12-21 14:26:54 PST
WebKit Review Bot
Comment 2 2011-12-21 14:28:44 PST
Attachment 120218 [details] did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit']" exit_code: 9 Updating OpenSource First, rewinding head to replay your work on top of it... Applying: Inform the scrolling coordinator when scrollbar layers come and go Using index info to reconstruct a base tree... <stdin>:474806: trailing whitespace. [Chromium] DatabaseTrackerChromium: iterating DatabaseSet races with Database disposal on worker thread <stdin>:474827: trailing whitespace. Nothing to test, just removing redundant code. Correct behavior tested by <stdin>:475346: trailing whitespace. warning: 3 lines add whitespace errors. Falling back to patching base and 3-way merge... warning: too many files (created: 167249 deleted: 3), skipping inexact rename detection Auto-merging LayoutTests/ChangeLog CONFLICT (content): Merge conflict in LayoutTests/ChangeLog Auto-merging Source/WebCore/ChangeLog CONFLICT (content): Merge conflict in Source/WebCore/ChangeLog Auto-merging Source/WebKit2/ChangeLog CONFLICT (content): Merge conflict in Source/WebKit2/ChangeLog Failed to merge in the changes. Patch failed at 0001 Inform the scrolling coordinator when scrollbar layers come and go When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 158. If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3 2011-12-21 14:47:05 PST
Note You need to log in before you can comment on or make changes to this bug.