Always reposition the scrollbar layers when the frame view size changes https://bugs.webkit.org/show_bug.cgi?id=75035

Reviewed by Darin Adler.

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::updateOverflowControlsLayers):
Remove the layersChanged check and unconditionally call positionScrollbarLayers(). This only
worked by accident before because we were recreating horizontal and vertical scrollbars on every call.

Canonical link: https://commits.webkit.org/91775@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103457 268f45cc-cd09-0410-ab3c-d52691b4dbfc